--- a/package.json
+++ b/package.json
@@ -3,12 +3,29 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@bit/joshk.react-spinners-css.facebook": "^1.1.8",
+    "@bit/joshk.react-spinners-css.grid": "^1.1.8",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "bootstrap": "4.0.0",
+    "bootstrap-social": "^5.1.1",
+    "cross-fetch": "^3.0.4",
+    "font-awesome": "^4.7.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
+    "react-popper": "0.9.2",
+    "react-redux": "^7.2.0",
+    "react-redux-form": "^1.16.14",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "3.4.1",
+    "react-spinner-material": "^1.3.1",
+    "react-spring": "^8.0.27",
+    "react-transition-group": "^4.4.1",
+    "reactstrap": "5.0.0",
+    "redux": "^4.0.5",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
