--- a/package.json
+++ b/package.json
@@ -2,18 +2,24 @@
   "name": "xylum",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:4000",
   "dependencies": {
     "@bit/joshk.react-spinners-css.facebook": "^1.1.8",
     "@bit/joshk.react-spinners-css.grid": "^1.1.8",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "body-parser": "^1.19.0",
     "bootstrap": "4.0.0",
     "bootstrap-social": "^5.1.1",
+    "compression": "^1.7.4",
+    "cookie-parser": "^1.4.5",
+    "cors": "^2.8.5",
     "cross-fetch": "^3.0.4",
     "express": "^4.17.1",
     "font-awesome": "^4.7.0",
     "gh-pages": "^2.2.0",
+    "helmet": "^3.22.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-popper": "0.9.2",
@@ -30,10 +36,13 @@
     "redux-thunk": "^2.3.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-        "build": "react-scripts build",
+    "build": "node ./buildScript",
+    "start-server": "cross-env NODE_ENV=development nodemon server/server.js --watch server/*",
+    "start-front": "react-scripts start",
+    "build-front": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "start": "concurrently \"npm run start-server\" \"npm run start-front\" --kill-others"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -49,5 +58,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "concurrently": "^5.2.0",
+    "cross-env": "^7.0.2",
+    "nodemon": "^2.0.4"
   }
 }
