--- a/package.json
+++ b/package.json
@@ -35,6 +35,11 @@
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0"
   },
+  "engines": {
+    "node": "12.16.1",
+    "npm": "6.14.4",
+    "yarn": "1.22.4"
+  },
   "scripts": {
     "build": "node ./buildScript",
     "start-server": "cross-env NODE_ENV=development nodemon server/server.js --watch server/*",
